[gd_scene load_steps=11 format=3 uid="uid://boxvw0upj2tem"]

[ext_resource type="Script" uid="uid://ddbiogg3wvd13" path="res://Environment/Bullet/bullet.gd" id="1_2dao8"]
[ext_resource type="Texture2D" uid="uid://8bfo5fiq4b8w" path="res://Environment/Bullet/GunBlast.png" id="2_xl5qq"]
[ext_resource type="PackedScene" uid="uid://coqgcyd453sjn" path="res://Environment/Bullet/BulletParticles.tscn" id="3_xhxbq"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xl5qq"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_xhxbq"]
atlas = ExtResource("2_xl5qq")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x51ye"]
atlas = ExtResource("2_xl5qq")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf3iu"]
atlas = ExtResource("2_xl5qq")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8c86"]
atlas = ExtResource("2_xl5qq")
region = Rect2(640, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ybu"]
atlas = ExtResource("2_xl5qq")
region = Rect2(768, 0, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_m7qes"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhxbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x51ye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf3iu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8c86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4ybu")
}],
"loop": false,
"name": &"Blast",
"speed": 15.0
}]

[node name="Bullet" type="Area2D"]
collision_mask = 3
script = ExtResource("1_2dao8")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 112, -32, 128, 0, 112, 32)

[node name="CPUParticles2D" parent="." instance=ExtResource("3_xhxbq")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("CanvasItemMaterial_xl5qq")
position = Vector2(64, 0)
sprite_frames = SubResource("SpriteFrames_m7qes")
animation = &"Blast"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
